--- a/style.css
+++ b/style.css
@@ -775,11 +775,12 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: white!important;
+    background-color: #ea5252;
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #ea5252;
     color: #FFFFFF!important;
 }
 
